# StockPilot

./: .gitignore  README.md  __init__.py  launcher.py  main.py  pyproject.toml  requirements.txt
ai/: events.py  manager.py  models.py  provider_factory.py  provider_manager.py  provider_registry.py  request_context.py
config/: __init__.py  app_config.json  logging.json  recent_workspaces.json  ui_config.json
core/: __init__.py  bootstrap.py  config_manager.py  constants.py  dependency_container.py  directories.py  environment.py  event_bus.py  exceptions.py  interfaces.py  lifecycle.py  logger.py  theme_manager.py  version.py
gui/: __init__.py  app.py  main_window.py
image/: __init__.py  collection_manager.py  duplicate_detector.py  file_watcher.py  filter_engine.py  image_events.py  image_hash.py  image_importer.py  image_indexer.py  image_manager.py  image_model.py  image_repository.py  image_scanner.py  image_statistics.py  image_validator.py  preview_loader.py  selection_manager.py  sort_engine.py  thumbnail_cache.py  thumbnail_generator.py
integration/: cache_validator.py  dependency_checker.py  integration_manager.py  metadata_pipeline_events.py  performance_profiler.py  pipeline_diagnostics.py  pipeline_health_monitor.py  pipeline_validator.py
metadata/: metadata_formatter.py  metadata_models.py  metadata_version.py  vision_context.py  vision_request_builder.py  vision_response_parser.py
processing/: batch_cache.py  batch_context.py  batch_events.py  batch_executor.py  batch_history.py  batch_job.py  batch_manager.py  batch_pipeline.py  batch_queue.py  (+13 more)
(+271 files in other folders)
