# pyproject.toml
[project]
name = "stockpilot-ai"
version = "1.0.0"
description = "Professional metadata assistant for stock contributors."
authors = [{name = "StockPilot Team"}]
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7.2",
    "pydantic>=2.8.2",
    "colorlog>=6.8.2",
    "dependency-injector>=4.41.0"
    "scikit-learn>=1.5.0"
]